nav bar bug fix
fixed a bug where the nav bar would stay clickable even when not visible
+ changed profile picture in the powerpoint

--- a/main.css
+++ b/main.css
@@ -136,6 +136,7 @@ div#navbar a {
   color: var(--light-color);
   opacity: 0;
   transition: 2s;
+  visibility: collapse;
 }
 
 input.toggle:checked + label div#navbar {
@@ -150,6 +151,7 @@ input.toggle:checked + label div#navbar a {
   font-size: 1.3em;
   text-align: center;
   animation: 1.2s apear forwards;
+  visibility: visible;
 }
 
 header:hover input.toggle:checked + label div#navbar {
